--- a/Makefile (3)
+++ b/Makefile (3)
@@ -1,18 +1,7 @@
-#------------------------------------------------------------------------------
-#  Makefile for CSE 101 Programming Assignment 7
-#
-#  make                     makes Order
-#  make DictionaryTest    makes DictionaryTest
-#  make clean               removes all binaries
-#  make OrderCheck          runs Order under valgrind on in5 junk5
-#  make DictionaryCheck     runs DictionaryTest under valgrind
-#------------------------------------------------------------------------------
-
 MAIN           = Order
 ADT            = Dictionary
 SOURCE         = $(MAIN).cpp
 OBJECT         = $(MAIN).o
-ADT_TEST       = $(ADT)Test
 ADT_SOURCE     = $(ADT).cpp
 ADT_OBJECT     = $(ADT).o
 ADT_HEADER     = $(ADT).h
@@ -24,24 +13,15 @@ MEMCHECK       = valgrind --leak-check=full
 $(MAIN): $(OBJECT) $(ADT_OBJECT)
 	$(LINK) $(MAIN) $(OBJECT) $(ADT_OBJECT)
 
-$(ADT_TEST): $(ADT_TEST).o $(ADT_OBJECT)
-	$(LINK) $(ADT_TEST) $(ADT_TEST).o $(ADT_OBJECT)
-
 $(OBJECT): $(SOURCE) $(ADT_HEADER)
 	$(COMPILE) $(SOURCE)
-
-$(ADT_TEST).o: $(ADT_TEST).cpp $(ADT_HEADER)
-	$(COMPILE) $(ADT_TEST).cpp
 
 $(ADT_OBJECT): $(ADT_SOURCE) $(ADT_HEADER)
 	$(COMPILE) $(ADT_SOURCE)
 
 clean:
-	$(REMOVE) $(MAIN) $(ADT_TEST) $(OBJECT) $(ADT_TEST).o $(ADT_OBJECT)
+	$(REMOVE) $(MAIN) $(OBJECT) $(ADT_TEST).o $(ADT_OBJECT)
 
 $(MAIN)Check: $(MAIN)
 	$(MEMCHECK) $(MAIN) in5 junk5
-
-$(ADT)Check: $(ADT_TEST)
-	$(MEMCHECK) $(ADT_TEST)
 
